# CascadeTerminal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  vercel.json  workers.Dockerfile
agent/: tools.py
api/: cascade.py  main.py  models.py  search.py  sse.py
scripts/: setup_mongo.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/terminal/: page.tsx
web/components/: Cascade.tsx  CascadeGraph.tsx  Feed.tsx  Globe.tsx  SearchBar.tsx  ThemeToggle.tsx
web/lib/: api.ts  sse.ts  store.ts
workers/: _common.py  alpha_vantage.py  marketaux.py  sec_edgar.py
